code smell 2