@@ -5,7 +5,6 @@ import lombok.Getter;
 import org.springframework.data.domain.Page;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Hotel List PageResponseDto
@@ -21,6 +20,6 @@ public class HotelListPageResponseDto extends PageResponseDto {
     }
 
     private List<HotelResponseDto> generateHotelResponseList(Page<Hotel> hotelPage) {
-        return hotelPage.getContent().stream().map(HotelResponseDto::new).collect(Collectors.toList());
+        return hotelPage.getContent().stream().map(HotelResponseDto::new).toList();
     }
 }
